# rustSmartScope

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  PROJECT_STATUS.md  README.md  build.sh  build_and_run.sh  build_incremental.sh  build_optimized.sh  cbindgen.toml  clean.sh  code_statistics_report_20251016_105052.txt  config.toml  count_code.sh  output_detection.txt  run.sh  simple_config.toml  smartscope.toml  test_config.toml
crates/c-ffi/: Cargo.toml
crates/c-ffi/src/: ai_api.rs  ai_events_api.rs  camera_api.rs  config_api.rs  init.rs  lib.rs  logging_api.rs  params_api.rs  recorder_api.rs  screen_recorder_api.rs  state.rs  storage_api.rs  storage_config_api.rs  storage_events_api.rs  storage_paths_api.rs  types.rs  video_api.rs
crates/camera-correction/: Cargo.toml  README.md
crates/camera-correction/examples/: parameter_loader.rs
crates/camera-correction/src/: distortion.rs  error.rs  lib.rs  parameters.rs  stereo.rs
crates/config-parser/: Cargo.toml  README.md
crates/config-parser/examples/: simple_config_demo.rs
crates/linux-video/: Cargo.toml
crates/rknn-inference/: BENCHMARK_RESULTS.md  Cargo.toml  DETAILED_TIMING_ANALYSIS.md  GETTING_STARTED.md  QUICKSTART.md  README.md  RUNNING.md  STATUS.md  build.rs
crates/rknn-inference/csrc/: file_utils.cpp  image_utils.cpp  postprocess.cc  rknn_wrapper.cpp  yolov8.cc
crates/rknn-inference/examples/: analyze_bottleneck.rs  async_inference_demo.rs  basic_service_test.rs  benchmark.rs  benchmark_detailed.rs  benchmark_timing_analysis.rs  fps_benchmark.rs  high_performance_inference.rs  multi_detector_service.rs  optimized_service_test.rs  simple_usage.rs  single_thread_test.rs  test_printf.rs  test_separate_steps.rs  thread_diagnosis.rs  yolov8_detect.rs
crates/rknn-inference/include/: rknn_inference_wrapper.h  silent_printf.h  yolov8.h  yolov8_inference.h
crates/rknn-inference/src/: error.rs  ffi.rs  lib.rs  multi_detector_service.rs  service.rs  simple_service.rs  types.rs
crates/rockchip-rga/: API_SUMMARY.md  Cargo.toml  README_API.md
crates/rockchip-rga/src/: api.rs  bindings.rs  buffer.rs  context.rs
crates/smartscope-core/: Cargo.toml
crates/smartscope-core/src/: camera.rs  config.rs  error.rs  events.rs  image_pipeline.rs  lib.rs  logger.rs  state.rs  types.rs  video_transform.rs
crates/stereo-sgbm/: Cargo.toml
crates/stereo-sgbm/examples/: sgbm_pipeline.rs
crates/stereo-sgbm/src/: lib.rs
crates/storage-detector/: Cargo.toml
crates/storage-detector/examples/: list.rs
crates/storage-detector/src/: lib.rs
crates/usb-camera/: Cargo.toml  README_CPP.md  cpp_callback_test  simple_callback_test
crates/usb-camera/examples/: cpp_callback_test.cpp  interface_test.cpp  simple_callback_test.cpp  simple_control_test.rs  threaded_adaptive_stream_example.rs  unified_data_test.cpp  usb_camera_example.rs
crates/usb-camera/include/: usb_camera.h
crates/usb-camera/src/: camera.rs  control.rs  cpp_interface.rs  device.rs  error.rs  lib.rs  stream.rs
crates/video-recorder/: Cargo.toml
crates/video-recorder/examples/: fullscreen_recording.rs  mpp_test.rs  optimized_fullscreen.rs  performance_test.rs  quick_ffmpeg_test.rs  quick_test.rs  screen_recording.rs  simple_test.rs  test_recorder.rs
crates/video-recorder/src/: capture.rs  capture_optimized.rs  encoder.rs  encoder_vfr.rs  encoder_vfr_t3.rs  error.rs  ffi.rs  ffmpeg_wrapper.rs  lib.rs  mpp_encoder.rs  optimized_fullscreen.rs  recorder.rs  service.rs  simple_encoder.rs  types.rs
reference_code/SmartScope/: .gitignore  CAMERA_CORRECTION_INTEGRATION_SUMMARY.md  CLAUDE.md  CMakeLists.txt  README.md.bak  RGA_INTEGRATION_SUMMARY.md  SmartScope.desktop  UNIFIED_CAMERA_SYSTEM.md  auto_build_and_run.sh  calibration_settings.yaml  config.toml  organize_root_files.sh  run.sh
reference_code/SmartScope/.augment/rules/: rule1.md
reference_code/SmartScope/config/: depth_calibration_config.toml
reference_code/SmartScope/docs/: CAMERA_CORRECTION_USAGE.md  CAMERA_CORRECTION_WRAPPER_SUMMARY.md  CORRECTION_WRAPPER_INTEGRATION_SUMMARY.md  FILE_INDEX.md  FUNCTIONAL_MODULES.md  KEYBOARD_SHORTCUTS.md  NEW_CAMERA_SYSTEM.md  PROJECT_STRUCTURE.md  camera_module.md  camera_sync_test.md  development_progress.md  module_usage.md
reference_code/SmartScope/docs/analysis/: CLEANUP_ANALYSIS.md  COMPLETE_REFACTORING_SUMMARY.md  INTERFACE_UNIFICATION_PLAN.md  MODULE_REFACTORING_REPORT.md  PHASE3_REFACTORING_REPORT.md  REFACTORING_ANALYSIS.md  REFACTORING_SUMMARY.md
reference_code/SmartScope/docs/debug/: DEBUG_FEATURE_README.md  LAYOUT_FIX_SUMMARY.md  POINT_CLOUD_DEPTH_FIX.md
reference_code/SmartScope/docs/en/: CLEAN_PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  rule.md  rule2.md
reference_code/SmartScope/docs/integration/: DEPTH_ANYTHING_INTEGRATION_ANALYSIS.md  DEPTH_ANYTHING_INTEGRATION_COMPLETE.md  DEPTH_MODE_SWITCH_ENHANCEMENT.md  STEREO_DEPTH_INTEGRATION.md
reference_code/SmartScope/docs/protocols/: Rk3588 Stm32 hid raw 通讯协议.md
reference_code/SmartScope/docs/zh/: 测试操作手册.docx  测试操作手册.md  测试用例模板.docx  测试用例模板.md  测试计划文档.docx  测试计划文档.md  测试项目总结.docx  测试项目总结.md  测试项目总结_更新版.docx  简化测试方案.docx  简化测试方案.md  细化测试项目计划.docx  细化测试项目计划.md  (+4 more)
reference_code/SmartScope/examples/: camera_correction_example.cpp  integration_example.cpp  unified_camera_example.cpp
reference_code/SmartScope/include/: mainwindow.h  statusbar.h
reference_code/SmartScope/resources/: resources.qrc
reference_code/SmartScope/scripts/: build.sh  build_test.sh  cleanup_script.sh  refactoring_phase1.sh  refactoring_phase1_safe.sh  refactoring_phase2.sh  快速测试启动.sh  测试实施脚本.sh  简化测试执行脚本.sh
reference_code/SmartScope/src/: main.cpp  mainwindow.cpp  statusbar.cpp
reference_code/SmartScope/yolov8_rknn_inference/: CMakeLists.txt
reference_code/crates/camera-correction/: Cargo.toml
reference_code/crates/core/: Cargo.toml
reference_code/crates/rockchip-mpp/: Cargo.toml
reference_code/crates/smartscope-core/: Cargo.toml
reference_code/crates/stm32-communication/: CHANGELOG.md  Cargo.toml  README.md
reference_code/crates/usb-camera/: CMakeLists.txt  unified_data_test
(+353 files in other folders)
