[workspace]
resolver = "2"

members = [
    "crates/smartscope-core",
    "crates/c-ffi",
    "crates/linux-video",
    "crates/usb-camera",
    "crates/rockchip-rga",
    "crates/stereo-calibration-reader",
    "crates/camera-correction",
    "crates/stereo-rectifier"
]

exclude = [
    "reference_code"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EDDYSUN <eddysun@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/eddysun/rustsmartscope"
description = "Modular stereo camera 3D reconstruction system built with Rust and C/C++"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Error handling & Logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# C FFI support
cbindgen = "0.29.0"
libc = "0.2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Camera and video
turbojpeg = "1.3"
nix = { version = "0.30.1", features = ["fs", "mman"] }
crossbeam-channel = "0.5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
opencv = { version = "0.95", default-features = false, features = ["calib3d", "imgproc", "highgui", "imgcodecs", "clang-runtime"] }