[package]
name = "smartscope-c-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal C FFI interface for RustSmartScope core"

[lib]
name = "smartscope"
crate-type = ["cdylib", "staticlib"]

[dependencies]
smartscope-core = { path = "../smartscope-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
lazy_static = { workspace = true }
image = { workspace = true }
rknn-inference = { path = "../rknn-inference" }
storage-detector = { path = "../storage-detector" }

[build-dependencies]
cbindgen.workspace = true
