[package]
name = "camera-correction"
version = "0.1.0"
edition = "2021"
description = "Camera distortion correction and stereo rectification for SmartScope"
authors = ["SmartScope Team"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
opencv = { workspace = true, optional = true }
stereo-calibration-reader = { path = "../stereo-calibration-reader" }
stereo-rectifier = { path = "../stereo-rectifier", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
opencv = ["dep:opencv", "dep:stereo-rectifier"]
