[package]
name = "linuxvideo"
version = "0.3.5"
edition = "2021"
license = "0BSD"
description = "V4L2 video capture and output library"
repository = "https://github.com/SludgePhD/LinuxVideo.git"
categories = ["multimedia::video", "os::linux-apis"]
keywords = ["linux", "video", "webcam"]

[dependencies]
log = { workspace = true }
uoctl = { workspace = true }
libc = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
anyhow = { workspace = true }
png = { workspace = true }
