[package]
name = "rockchip-rga"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Rockchip RGA 2D accelerator"
license = "Apache-2.0"
repository = "https://github.com/rockchip-linux/librga"

[lib]
name = "rockchip_rga"
crate-type = ["lib", "staticlib"]

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
log = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }
bindgen = { workspace = true }

[features]
default = []

[lints.rust]
improper_ctypes = "allow"
