[package]
name = "smartscope-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for RustSmartScope"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time", "json"] }
tracing-appender = "0.2"
notify = "6.0"

[dev-dependencies]
tempfile = "3.0"