[package]
name = "usb-camera"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "USB Camera management library for SmartScope"
license.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
libc = { workspace = true }
nix = { workspace = true }
crossbeam-channel = { workspace = true }
toml = { workspace = true }

# V4L2 support for real hardware
linuxvideo = { path = "../linux-video" }
chrono = { workspace = true }
base64 = { workspace = true }
turbojpeg = { workspace = true }

# Hardware acceleration support (disabled until properly implemented)
# rockchip-mpp = { path = "../rockchip-mpp" }
# rockchip-rga = { path = "../rockchip-rga" }

[dev-dependencies]
ctrlc = { workspace = true }
crossbeam-channel = { workspace = true }

[lib]
name = "usb_camera"
crate-type = ["cdylib", "staticlib", "rlib"]