[package]
name = "video-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
lazy_static = "1.5.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# X11 screen capture
x11rb = { version = "0.13", features = ["all-extensions"] }

# Queue channel for non-blocking service
crossbeam-channel = "0.5"

[dev-dependencies]
env_logger = "0.11"
