[package]
name = "video-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
lazy_static = "1.5.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
which = "6.0"  # For detecting available recording backends
nix = { version = "0.30", features = ["signal", "process"] }  # For graceful process termination

[dev-dependencies]
env_logger = "0.11"
