[package]
name = "camera-correction"
version = "0.1.0"
edition = "2021"
description = "Camera distortion correction and stereo rectification for SmartScope"
authors = ["SmartScope Team"]
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = "1.0.143"
thiserror = { workspace = true }
log = "0.4.27"
env_logger = "0.11.8"
clap = { version = "4.5.46", features = ["derive"] }
opencv = { workspace = true, optional = true }
stereo-calibration-reader = { path = "../stereo-calibration-reader" }
stereo-rectifier = { path = "../stereo-rectifier", optional = true }

[dev-dependencies]
tempfile = "3.21.0"

[features]
default = []
opencv = ["dep:opencv", "dep:stereo-rectifier"]
